# eOrgan-firmware

./: .gitignore  Makefile  README.md  eOrgan-firmware.code-workspace
KeyboardEncoder/: platformio.ini
KeyboardEncoder/src/: Keyboard.cpp  Keyboard.h  Settings.cpp  Settings.h  config.h  main.cpp
LEDController/: platformio.ini
LEDController/src/: LED.cpp  LED.h  Settings.cpp  Settings.h  config.h  main.cpp
MIDIController/: platformio.ini
MIDIController/src/: AudioProcessor.cpp  AudioProcessor.h  CmdlineParser.cpp  CmdlineParser.h  CommandLine.cpp  CommandLine.h  ConfigController.cpp  ConfigController.h  ControllerDriver.cpp  ControllerDriver.h  CouplerProcessor.cpp  CouplerProcessor.h  MIDIRouter.cpp  MIDIRouter.h  OrganStateManager.cpp  OrganStateManager.h  PanelInterface.cpp  PanelInterface.h  main.cpp
MainPanelEncoder/: platformio.ini
MainPanelEncoder/src/: MainPanel.cpp  MainPanel.h  Settings.cpp  Settings.h  config.h  main.cpp
PanelUI/: CMakeLists.txt  Toolchain-rpi.cmake  panelui.desktop
PanelUI/src/: PanelDriver.cpp  PanelDriver.h  SerialInterface.cpp  SerialInterface.h  commonTypes.h  config.h  main.cpp
PedalEncoder/: platformio.ini
PedalEncoder/src/: LED.cpp  LED.h  Pedal.cpp  Pedal.h  (+4 more)
PistonEncoder/: platformio.ini
TechnicsController/: platformio.ini
TechnicsEncoder/: platformio.ini
TeensyController/: platformio.ini
ToeStudEncoder/: platformio.ini
doc/: MIDI.txt  MIDIController Architecture.drawio  Notes.txt  Raspberry.txt  Routes.txt  Teensy.txt  Todo.txt
firmware/: SConstruct
include/: common_config.h  panel_commands.h
(+98 files in other folders)
